Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57595

Textures not loaded when using EntityLoader

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.8.0
    • 5.8.0 RC
    • Qt3D
    • 2f3837cdbce8b27499db03f376e3781f5aede317

    Description

      Following the texture refactoring when using an EntityLoader to dynamically load a QML file, any contained textures are not correctly uploaded to the GPU resulting in black textures for the dynamically loaded part of the scene.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lemire_p Paul Lemire
            seanharmer Sean Harmer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes